Fix: Make checkin/out times work
We now properly validate checkin/out times as well as the calendar URL
that is being used.

Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/custom_components/rental_control/translations/en.json
+++ b/custom_components/rental_control/translations/en.json
@@ -13,6 +13,8 @@
         "data": {
           "url": "URL",
           "name": "Calendar name",
+          "checkin": "Default Check-in time",
+          "checkout": "Default Check-out time",
           "max_events": "Number of event sensors to create",
           "days": "Maximum number of days into the future to fetch",
           "verify_ssl": "Verify SSL certificates"
