--- a/custom_components/rental_control/translations/en.json
+++ b/custom_components/rental_control/translations/en.json
@@ -1,22 +1,19 @@
 {
   "config": {
-    "abort": {
-      "already_configured": "Device is already configured"
-    },
     "error": {
-      "cannot_connect": "Failed to connect",
-      "invalid_auth": "Invalid authentication",
+      "bad_time": "Check-in/out time is invalid. Use 24 hour time",
+      "invalid_url": "Invalid Calendar URL",
       "unknown": "Unexpected error"
     },
     "step": {
       "user": {
         "data": {
-          "url": "URL",
-          "name": "Calendar name",
           "checkin": "Default Check-in time",
           "checkout": "Default Check-out time",
-          "max_events": "Number of event sensors to create",
           "days": "Maximum number of days into the future to fetch",
+          "max_events": "Number of event sensors to create",
+          "name": "Calendar name",
+          "url": "Calendar URL",
           "verify_ssl": "Verify SSL certificates"
         }
       }
