Feat: Add should_update_code to configuration
Add new flag for data based codes to update the code if the start or end
date of future events change. This will allow for the code to be updated
if the event changes and the code is no longer valid.

Schema version is updated to 7 with the flag defaulting to False for
existing configurations and True for new configurations.

Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/custom_components/rental_control/translations/fr.json
+++ b/custom_components/rental_control/translations/fr.json
@@ -26,6 +26,7 @@
           "name": "Nom du calendrier",
           "refresh_frequency": "Rafraîchir le calendrier en minutes. 0 - 1440",
           "start_slot": "Slot de départ pour la gestion",
+          "should_update_code": "Pour les codes basés sur la date, mettez à jour le code si les événements futurs changent les dates de début ou de fin",
           "timezone": "Fuseau horaire du calendrier",
           "url": "URL du calendrier",
           "verify_ssl": "Vérifier les certificats SSL"
@@ -60,6 +61,7 @@
           "name": "Nom du calendrier",
           "refresh_frequency": "Rafraîchir le calendrier en minutes. 0 - 1440",
           "start_slot": "Slot de départ pour la gestion",
+          "should_update_code": "Pour les codes basés sur la date, mettez à jour le code si les événements futurs changent les dates de début ou de fin",
           "timezone": "Fuseau horaire du calendrier",
           "url": "URL du calendrier",
           "verify_ssl": "Vérifier les certificats SSL"
