Feat(config): allow HTTP URLs when SSL verification disabled
Previously, config_flow required HTTPS URLs unconditionally. Now
HTTP URLs are permitted when verify_ssl is set to False, enabling
use of local/development calendar servers without SSL.

Updated error messages in strings.json and translations to reflect
the new conditional behavior.

Co-Authored-By: GitHub Copilot <copilot@github.com>
Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/custom_components/rental_control/translations/fr.json
+++ b/custom_components/rental_control/translations/fr.json
@@ -7,7 +7,7 @@
       "bad_refresh": "Le rafraîchissement doit être compris entre 0 et 1440.",
       "bad_time": "L'heure d'arrivée/départ est invalide. Utilisez le format 24 heures",
       "invalid_path": "Le chemin doit être un chemin relatif, non absolu",
-      "invalid_url": "Seules les URLs en https sont prises en charge",
+      "invalid_url": "HTTPS requis lorsque la vérification SSL est activée",
       "same_name": "Nom déjà utilisé",
       "unknown": "Erreur inattendue, vérifiez les journaux pour plus de détails"
     },
@@ -42,7 +42,7 @@
       "bad_refresh": "Le rafraîchissement doit être compris entre 0 et 1440.",
       "bad_time": "L'heure d'arrivée/départ est invalide. Utilisez le format 24 heures",
       "invalid_path": "Le chemin doit être un chemin relatif, non absolu",
-      "invalid_url": "Seules les URLs en https sont prises en charge",
+      "invalid_url": "HTTPS requis lorsque la vérification SSL est activée",
       "same_name": "Nom déjà utilisé",
       "unknown": "Erreur inattendue, vérifiez les journaux pour plus de détails"
     },
