Refactor(config): improve URL validation error handling
- Add distinct https_required error key for HTTP+verify_ssl case
- Restore invalid_url for genuinely malformed URLs (cv.url failure)
- Use CONF_URL constant consistently instead of literal 'url'
- Make HTTPS check case-insensitive using .lower().startswith()

Co-Authored-By: GitHub Copilot <copilot@github.com>
Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/custom_components/rental_control/translations/fr.json
+++ b/custom_components/rental_control/translations/fr.json
@@ -6,8 +6,9 @@
       "bad_minimum": "La valeur doit être de 1 ou plus",
       "bad_refresh": "Le rafraîchissement doit être compris entre 0 et 1440.",
       "bad_time": "L'heure d'arrivée/départ est invalide. Utilisez le format 24 heures",
+      "https_required": "HTTPS requis lorsque la vérification SSL est activée",
       "invalid_path": "Le chemin doit être un chemin relatif, non absolu",
-      "invalid_url": "HTTPS requis lorsque la vérification SSL est activée",
+      "invalid_url": "L'URL est mal formée ou invalide",
       "same_name": "Nom déjà utilisé",
       "unknown": "Erreur inattendue, vérifiez les journaux pour plus de détails"
     },
@@ -41,8 +42,9 @@
       "bad_minimum": "La valeur doit être de 1 ou plus",
       "bad_refresh": "Le rafraîchissement doit être compris entre 0 et 1440.",
       "bad_time": "L'heure d'arrivée/départ est invalide. Utilisez le format 24 heures",
+      "https_required": "HTTPS requis lorsque la vérification SSL est activée",
       "invalid_path": "Le chemin doit être un chemin relatif, non absolu",
-      "invalid_url": "HTTPS requis lorsque la vérification SSL est activée",
+      "invalid_url": "L'URL est mal formée ou invalide",
       "same_name": "Nom déjà utilisé",
       "unknown": "Erreur inattendue, vérifiez les journaux pour plus de détails"
     },
